@@ -4,7 +4,8 @@ Changelog
 4.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added toggle for using canonical_uri in BVID export, refs #14156
+  [reinhardt]
 
 
 4.0.1 (2016-05-23)
